Fixing alignment/size of language buttons
BUG=(internal i10n bug)
TEST=ran on device

Review URL: http://codereview.chromium.org/6927026

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@84157 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 67108e60f0873b9bc6b66100040c84878d6848ea

--- a/chrome/browser/resources/options/language_options.css
+++ b/chrome/browser/resources/options/language_options.css
@@ -64,6 +64,16 @@
   -webkit-margin-start: 20px;
 }
 
+#language-options-ui-language-button {
+  width: 95%;
+  -webkit-margin-start: 10px;
+}
+
+#language-options-spell-check-language-button {
+  width: 95%;
+  -webkit-margin-start: 10px;
+}
+
 #language-options-input-method-list label {
   margin: 4px 0;
 }
